Simplified and fixed the ::before and ::after elements and organised the code into its own section for readability

--- a/css/style.css
+++ b/css/style.css
@@ -99,19 +99,6 @@ img {
     margin: 0 auto;
 }
 
-h1::before, h1::after, 
-.typewriter::before, .typewriter::after,
-.projects-container::before, .projects-container::after,
-section::before, section::after { 
-    font-family: 'La Belle Aurore', cursive;    
-    font-size: 1.4rem;
-    position: absolute;
-    left: 2rem;
-    z-index: -1;
-    color: var(--primary-color-1);
-}
-
-
 /* Sitewide */
 
 .nav-banner { 
@@ -135,29 +122,11 @@ section::before, section::after {
     height: 100vh;
     display: flex;
     align-items: center;
-    
 }
 
 h1 { 
     font-size: 10rem;
     padding: 2rem;
-}
-
-h1::before, h1::after { 
-    font-family: 'La Belle Aurore', cursive;
-    font-size: 1.4rem;
-    font-weight: normal;
-    position: absolute;
-}
-
-h1::before { 
-    content: "<h1>";
-    margin-top: -1rem;
-}
-
-h1::after { 
-    content: "</h1>";
-    margin-top: 10rem;
 }
 
 .typewriter { 
@@ -167,34 +136,11 @@ h1::after {
     padding-left: 2rem;
 }
 
-.typewriter::before, .typewriter::after { 
-    font-family: 'La Belle Aurore', cursive;    
-    font-size: 1.4rem;
-    position: absolute;
-}
-
-.typewriter::before { 
-    content: "<p>";
-    margin-top: -1.1rem;
-}
-
-.typewriter::after { 
-    content: "</p>";
-    margin-top: 4.3rem;
-}
-
 .about { 
+    position: relative;
     padding: 30px 20%;
     overflow: hidden;
     background-color: var(--black);
-}
-
-.about::before {
-    content: "<about>";
-}
-
-.about::after { 
-    content: "</about>";
 }
 
 .about p { 
@@ -205,14 +151,9 @@ h1::after {
     color: #f5f5f5;
 }
 
-.skills::before {
-    content: "<skills>";
-    
-}
-
-.skills::after { 
-    content: "</skills>";
-    display: block;
+.skills { 
+    position: relative;
+    margin-bottom: 50px;
 }
 
 .skills ul {
@@ -244,14 +185,6 @@ h1::after {
     justify-content: space-around;
 }
 
-.projects-container::before { 
-    content: "<projects>";
-}
-.projects-container::after {
-    content: "</projects>";
-    top: 100%;
-}
-
 .project-card { 
     height: auto;
     width: 45ch;
@@ -279,8 +212,78 @@ h1::after {
     background-color: var(--primary-color-1);
 }
 
+/* PSEUDO ELEMENT TAGS */
+
+.hero > div { 
+    position: relative;
+}
+
+*::before, *::after { 
+    font-family: 'La Belle Aurore', cursive;    
+    font-size: 1.4rem;
+    position: absolute;
+    left: 0.5rem;
+    z-index: 1;
+    color: var(--primary-color-1);
+}
+
+*::before { 
+    margin-top: -1rem;
+}
+
+h1::before, h1::after { 
+    font-weight: normal;
+}
+
+h1::after, .typewriter::after { 
+    display: block;
+}
+
+h1::before { 
+    content: "<h1>";
+}
+
+h1::after { 
+    content: "</h1>";
+}
+
+.typewriter::before { 
+    content: "<p>";
+}
+
+.typewriter::after { 
+    content: "</p>";
+}
+
+.about > div::before {
+    content: "<about>";
+}
+
+.about > div::after { 
+    content: "</about>";
+}
+
+.skills > ul::before {
+    content: "<skills>";
+}
+
+.skills > ul::after { 
+    content: "</skills>";
+    top: 100%;
+}
+
+.projects-container::before { 
+    content: "<projects>";
+}
+.projects-container::after {
+    content: "</projects>";
+    top: 100%;
+}
+
+/* MEDIA QUERIES */
+
 @media only screen and (min-width: 1600px) { 
-    .hero { 
+    main { 
         max-width: 1600px;
         margin: 0 auto;
     }
@@ -321,25 +324,12 @@ h1::after {
         font-size: 5rem;
     }
 
-    h1::after { 
-        margin-top: 5.4rem;
-        left: 2rem;
-    }
 
     .typewriter { 
         font-size: 2rem;
     }
 
-    .typewriter::before { 
-        margin-top: -1.5rem;
-    }
-
-    .typewriter::after { 
-        margin-top: 2.5rem;
-        left: 2rem;
-    }
-
     .about { 
-        padding: 5%;
+        padding: 12%;
     }
 }
